# dinghybook

./: .gitignore  Dockerfile  LICENSE  LICENSE.txt  README.md  hello.py  pyproject.toml  requirements.txt  requirements2.txt  ruff.toml  testing.ipynb
booker/: __init__.py  auth.py  blog.py
booker/templates/: base.html
src/dinghybook/: __about__.py  __init__.py  __main__.py  config.toml  database.py  models.py  views.py
src/dinghybook/cli/: __init__.py
src/dinghybook/templates/: index.html.j2  list.html.j2
tests/: __init__.py  conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
