[project]
name = "booker"
version = "0.0.1"
authors = [
  { name="Ed Landamore", email="ortho@ratship.net" },
]
description = "An app for booking club dinghies."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["booker"]